# Metric-Net-Agent

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  config.yaml  go.mod  go.sum
bpf/: net.bpf.c
clients/otel_cpp_client/: CMakeLists.txt  main.cpp
cmd/netagent/: main.go
dashboards/: netagent-grafana.json  netagent-tempo.json
deploy/observability/: collector.yaml  docker-compose.yml  prometheus.yml  tempo.yaml
internal/config/: config.go
internal/ebpf/: loader.go  netagent_bpfeb.go  netagent_bpfel.go
internal/metrics/: metrics.go
scripts/: gen-vmlinux.sh  install-deps-ubuntu24.sh  install-go-packages.sh  run-grafana-demo.sh  run-observability-stack.sh  run-otel-collector.sh  run-prometheus-docker.sh  run-prometheus-local.sh  run-tempo-docker.sh  smoke-test.sh
